[Add] Favicon files

--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,15 @@
 <head>
 	<meta charset="UTF-8">
 	<title>SeismoLiveJP | 日本語</title>
+
 	<link rel="stylesheet" href="/assets/css/style.css">
 	<link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+
+	<link rel="icon" type="image/png" sizes="16x16" href="/assets/icon/favicon-16x16.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/assets/icon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="/assets/icon/favicon-96x96.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="/assets/icon/apple-icon-180x180.png">
+	<link rel="manifest" href="/assets/icon/manifest.json">
 </head>
 <body>
 	<div class="navigation-container">
