--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>SeismoLiveJP | 日本語</title>
+	<meta name="description" content="SeismoLiveJP is a web application that delivers real-time earthquake data from the Japan Meteorological Agency (JMA), accessible from anywhere in the world." />
+
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-9DX528W6NP"></script>
+	<script src="/assets/js/analytics.js"></script>
+	<meta name="google-site-verification" content="TSU4jh-DtyPQt63JRpivnLAKbx2OtJg37OVvd0qD9UQ" />
 
 	<link rel="stylesheet" href="/assets/css/style.css">
 	<link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
