[Chore] Update changeLanguage

--- a/public/en/index.html
+++ b/public/en/index.html
@@ -22,7 +22,7 @@
 	<div class="navigation-container">
 		<nav class="navigation">
 			<div class="navigation-logo">
-				<img src="/assets/image/banner/seismolivejp-banner.svg" alt="SeismoLiveJP">
+				<a href="/en/"><img src="/assets/image/banner/seismolivejp-banner.svg" alt="SeismoLiveJP"></a>
 			</div>
 			<div class="navigation-menu">
 				<a href="/assets/image/JMA-seismic-intensity-scale-eng.png"  target="_blank" id="back-link">About Seismic Intensity</a>
