--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
 	<div class="navigation-container">
 		<nav class="navigation">
 			<div class="navigation-logo">
-				<img src="/assets/image/banner/seismolivejp-banner.svg" alt="SeismoLiveJP">
+				<a href="/"><img src="/assets/image/banner/seismolivejp-banner.svg" alt="SeismoLiveJP"></a>
 			</div>
 			<div class="navigation-menu">
 				<a href="/assets/image/JMA-seismic-intensity-scale-ja.png"  target="_blank" id="back-link">震度について</a>
